--- a/index.html
+++ b/index.html
@@ -3,26 +3,35 @@
   <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
     <div class="container-fluid">
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
+    <nav class="navbar navbar-inverse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="resume.html">Resume</a></li>
         </ul>
-      </nav>
-    <div id = "content"></div>
-      <div class="headline">
-      <p>Hi, I'm Shanita. I am a front-end web developer.</p>
+    </nav>
+
+      <div class="row">
+      <div class="content">
+        <p>Hi, I'm Shanita. I am a front-end web developer. Welcome to my site.</p>
       </div>
+    </div>
+      </div
 
 
-    <footer>
-    Contact me at: shanitanscott@yahoo.com</footer>
+
+
+
+
+
+
+
   </body>
 </html>
